# d2bs-qjs

./: .clang-format  .editorconfig  .gitignore  ArrayEx.h  AutoRoot.cpp  AutoRoot.h  CMakeLists.txt  CMakePresets.json  CommandLine.cpp  CommandLine.h  Console.cpp  Console.h  Constants.h  Control.cpp  Core.cpp  CriticalSections.h  D2BS.cpp  D2BS.h  D2Handlers.cpp  D2Helpers.cpp  D2Intercepts.cpp  D2Loader.h  D2NetHandlers.cpp  D2Ptrs.h  D2Skills.h  D2Structs.h  Events.cpp  Events.h  File.cpp  Game.cpp  Hash.cpp  Helpers.cpp  JSArea.cpp  JSArea.h  JSControl.cpp  JSControl.h  JSCore.cpp  JSDirectory.cpp  JSDirectory.h  JSExits.cpp  (+46 more)
.github/workflows/: cmake-single-platform.yml  pre-release.yml  pull-request.yml  tagged-release.yml
Map/: BlankMap.h  Map.h
Map/Diablo_II/: ActMap.cpp  ActMap.h  LevelMap.cpp  LevelMap.h
Map/Path/: AStarPath.h  Path.h
Map/Path/Reduction/: JSPathReducer.h  NoPathReducer.h  PathReducer.h  TeleportPathReducer.h  WalkPathReducer.h
doc/: Control.h  PresetUnit.h  Room.h  globalFuncs.h
sandbox/: CMakeLists.txt  main.cpp
src/: Engine.cc  Engine.h  Globals.cc  Globals.h  Matrix.h  StackWalker.h  main.cc
src/Diablo II/: Constants.h  D2Helpers.cpp  D2Helpers.h  D2Ptrs.h  D2Skills.h  D2Structs.h  Patch.h
src/Diablo II/Handlers/: D2Handlers.cpp  D2Handlers.h  D2NetHandlers.cpp
src/Diablo II/Patches/: D2Intercepts.cpp  D2Intercepts.h
src/Game/: D2Automap.cc  D2Automap.h  D2Chat.h  D2DataTbls.h  D2Dungeon.h  D2Game.h  D2Gfx.cc  D2Gfx.h  D2Inventory.h  D2Quests.h  D2Roster.h  D2Skills.cc  D2Skills.h  D2StatList.h  D2Unit.h  D2Waypoints.h  D2WinControl.h  D2WinUnknown.h  Unorganized.h  UnorganizedConstants.h
src/Game/DataTbls/: ItemsTbls.h  LevelsTbls.h  MonsterTbls.h  ObjectsTbls.h  SkillsTbls.h
src/Game/Drlg/: D2DrlgDrlg.cc  D2DrlgDrlg.h  D2DrlgPreset.h
src/Game/GAME/: Game.h
src/Game/Path/: Path.h
src/Game/QUESTS/: Quests.h
src/Game/UI/: NPCMenu.cc  NPCMenu.h
src/Game/Units/: Item.h  Monster.h  Object.h  Player.h  Units.cc  Units.h
src/Main/: D2BS.cpp  D2BS.h
src/Map/: BlankMap.h  Map.h
src/Map/Diablo_II/: ActMap.cpp  ActMap.h  LevelMap.cpp  LevelMap.h
src/Map/Path/: AStarPath.h  Path.h
src/Map/Path/Reduction/: JSPathReducer.h  NoPathReducer.h  PathReducer.h  TeleportPathReducer.h  WalkPathReducer.h
src/Misc/: ArrayEx.h  CommandLine.cpp  CommandLine.h  Console.cpp  Console.h  CriticalSections.h  D2Loader.h  Events.cpp  Events.h  Helpers.cpp  Helpers.h  Localization.cc  Localization.h  MapHeader.h  Offset.cpp  Offset.h  SyncObj.h  TimedAlloc.h  js32.cpp  js32.h  sqlite3.h  stringhash.cpp  stringhash.h
src/Spidermonkey Engine/Core/: JSBaseObject.cc  JSBaseObject.h  JSTimer.cc  JSTimer.h  StringWrap.cc  StringWrap.h  Trampoline.h
src/Spidermonkey Engine/Core/API/: JSArea.h  JSControl.h  JSCore.h  JSDirectory.h  JSExits.h  JSFile.h  JSFileTools.h  JSGame.h  JSGlobalClasses.h  JSGlobalFuncs.h  JSHash.h  JSMenu.h  JSParty.h  JSPresetUnit.h  JSProfile.h  JSRoom.h  JSSQLite.h  JSSandbox.h  JSScreenHook.h  JSScript.h  JSSocket.h  JSUnit.h
src/Spidermonkey Engine/Core/C/: Control.cpp  Control.h  Core.cpp  Core.h  File.cpp  File.h  Game.cpp  Game.h  Hash.cpp  Hash.h  MPQStats.cpp  MPQStats.h  Profile.cpp  Profile.h  Room.cpp  Room.h  ScreenHook.cpp  ScreenHook.h  Unit.cpp  Unit.h  dde.cpp  dde.h
src/Spidermonkey Engine/Core/JS/: JSArea.cpp  JSControl.cpp  JSCore.cpp  JSDirectory.cpp  JSExits.cpp  JSFile.cpp  JSFileTools.cpp  JSGame.cpp  JSGlobalClasses.cpp  JSHash.cpp  JSMenu.cpp  JSParty.cpp  JSPresetUnit.cpp  JSProfile.cpp  JSRoom.cpp  JSSQLite.cpp  JSSandbox.cpp  JSScreenHook.cpp  JSScript.cpp  JSSocket.cpp  JSUnit.cpp
src/Spidermonkey Engine/Engine/: AutoRoot.cpp  AutoRoot.h  Bindings.cc  Bindings.h  CallArgs.cc  CallArgs.h  Script.cpp  Script.h  ScriptEngine.cpp  ScriptEngine.h  js32.cpp  js32.h
